--- a/public/style.css
+++ b/public/style.css
@@ -30,7 +30,15 @@ body {
   border-radius: 50%;
   object-fit: cover;
   border: 4px solid white;
+  margin-bottom: 10px;
+}
+
+.current-date-time {
+  font-size: 18px;
+  color: #007bff;
+  font-weight: bold;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .login-box {
@@ -54,7 +62,6 @@ body {
   border-radius: 50px;
   margin: 0 auto 20px;
 }
-
 
 .input-group {
   margin-bottom: 15px;
@@ -112,18 +119,18 @@ body {
 }
 
 .task-item .task-actions button {
-background-color: #007bff;
-border: none;
-color: white;
-padding: 6px 12px;
-cursor: pointer;
-border-radius: 4px;
-margin-left: 10px; /* Added margin for better spacing */
-transition: background-color 0.3s;
+  background-color: #007bff;
+  border: none;
+  color: white;
+  padding: 6px 12px;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-left: 10px;
+  transition: background-color 0.3s;
 }
 
 .task-item .task-actions button:hover {
-background-color: #0056b3;
+  background-color: #0056b3;
 }
 
 .task-item.complete {
@@ -137,16 +144,17 @@ background-color: #0056b3;
 }
 
 .task-text {
-  flex-grow: 1; /* Allows task text to take up available space */
+  flex-grow: 1;
 }
 
 .task-date {
   margin-left: 10px;
 }
+
 .task-list {
   list-style: none;
   padding: 0;
   margin-top: 20px;
-  max-height: 300px; /* Adjust this value as needed */
-  overflow-y: auto; /* Add a vertical scrollbar if needed */
+  max-height: 300px;
+  overflow-y: auto;
 }
